--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,7 @@ jobs:
           node-version: '14' # Specify the Node.js version
 
       - name: Install Dependencies # Install project dependencies
-        run: npm install # Run the npm install command to install dependencies
+        run: npm install --force # Run the npm install command to install dependencies
 
       - name: Run Tests # Run automated tests
         run: npm test # Run the npm test command to execute tests
